--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -1,1 +1,25 @@
 \section{Post Release}
+
+-Latent defects, 85\% p. 347
+-Software is delivered to clients woth latent defects 100\%
+-Web applications -> difference in distribution channels
+-Commercial vendors have begun to deliver software with significant number of defects
+	-Earlier delivery dates
+	-"A rapid follow-on release will fix the defects"
+	-The intent to use the skills of customers for defect repairs
+-Compensating the user for repairing or identifying security flaws
+
+-Defect severity levels
+-Maintainability
+	-Maintenance assignment scope
+	-Cyclomatic complexity
+	-Entropy or rate of structural decay
+
+-Positive impact on maintainability
+	-Training
+	-Structural diagrams
+	-Comments clarity
+	-No error-prone modules
+	-Maintenance tools
+	-Maintenance workloads
+	-Programming languages
