Another test commit

--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -50,7 +50,8 @@ Testing is one of the oldest forms of software defect removal. It has been the m
 
  Subroutine testing is a glass box form of testing. It is used in almost every custom-coded software and over 90\% of defect repairs. The defect removal efficiency is between 25\% and 75\% and in average 55\%. Because subroutine testing is such a natural process and is such an efficient way to prevent defects, it is often omitted in testing literature.
 
- \subsection{Unit Testing p.297}
+ % p.297
+ \subsection{Unit Testing}
 
  Unit testing is aimed at small code modules ranging from around 100 to 1000 source code statements. Units are tested by executing the new or repaired code. In case of developing new features, also the surrounding modules can be unit tested. The testing is usually run by the developer who wrote the module. This leads to poor data collection lowering the amount of data available for unit testing.
 
