--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -67,6 +67,8 @@ Testing is one of the oldest forms of software defect removal. It has been the m
 
  \subsection{New Function Testing}
 
+TODO: Jokohan nyt
+
  \subsection{Regression Testing}
 
  \subsection{Integration Testing}
