Please ignore this also

--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -65,6 +65,8 @@ Testing is one of the oldest forms of software defect removal. It has been the m
 
 % TDD
 
+NOTE! More pollution for testing
+
  \subsection{New Function Testing}
 
  \subsection{Regression Testing}
