--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -67,6 +67,11 @@ Testing is one of the oldest forms of software defect removal. It has been the m
 
 NOTE! More pollution for testing
 
+
+
+
+ASDASD
+
  \subsection{New Function Testing}
 
  \subsection{Regression Testing}
