Fixed some unprefixed special characters giving warnings

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -22,7 +22,7 @@ PREVENTIVE
   
  \item ECO: We use these quality metrics to compare a number of quality improvement techniques at each stage of the software development life cycle and quantify their efficacy using data from real-world applications.
  
- \item Direct costs & efforts p. 200 table
+ \item Direct costs \& efforts p. 200 table
 
  \item ECO: Analysis of pretest defect removal activities p. 208
 
