--- a/qa_startup/s_startup.tex
+++ b/qa_startup/s_startup.tex
@@ -26,7 +26,7 @@ Lean Startup has got 5 principles.
 % "If we dont know who the customer is, we do not know what quality is"
 % 
 
--Datan keruu & oppiminen
+-Datan keruu \& oppiminen
 
 ~\cite{ries2011lean}
 
