Added agile testing

--- a/improving/s_testing.tex
+++ b/improving/s_testing.tex
@@ -134,14 +134,12 @@ System testing can benefit from static analysis and code inspections. IBM studie
 
 System testing is used in over 99\% of systems over 10000 function points. 75\% of projects over 1000 function points and 50\% of projects over 100 function points are using system testing. The defect removal efficiency ranges from under 25\% to over 95\% averaging 55\%.
  
-
  \subsection{Agile Testing}
 
- % Special form of testing
- % One of the newest forms of testing
- % Embedded users: requirements and test case definition
- % Primarily black box
- % for normal agile projects, effective assistance and validation
- % Extreme Programming: test cases developed prior to writing the code
+Agile testing is a special form of testing and among the newest forms of testing. As Agile development contains embedded users, these users can define the requirements for a sprint or iteration. Embedded users can also define the proper test cases for an iteration. These test cases are primarily black box test cases, where the embedded user defines the functionality under test and the expected behavior.
 
- % Statsit?
+In the development of larger applications that might have thousands of users, no single user can produce adequate information for gathering the requirements or specification of test cases. In the testing of normal Agile projects, under 1000 function points, the embedded users can provide effective assistance for the specification of test cases. Also the validation of test results can be usually aided by the embedded users.
+
+In a certain type of Agile development, extreme programming, the test cases are developed prior to the implementation of the features. However, this procedure is not present in all Agile development.
+
+Agile testing is used in over 90\% of Agile application development. Defect removal efficiency is in range of under 40\% to over 65\% and in average 50\%. Agile testing can benefit from static analysis and extreme programming testing.
