Beginning of the section Post-Release

--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -1,25 +1,29 @@
 \section{Post Release}
 
--Latent defects, 85\% p. 347
--Software is delivered to clients woth latent defects 100\%
--Web applications -> difference in distribution channels
--Commercial vendors have begun to deliver software with significant number of defects
-	-Earlier delivery dates
-	-"A rapid follow-on release will fix the defects"
-	-The intent to use the skills of customers for defect repairs
--Compensating the user for repairing or identifying security flaws
+After a software product has been released to the market, it practically always still has defects in it. IBM calls these defects latent defects, because before the release, these defects have not yet been found as problems to customers. The existence of these defects is due to the imperfect effectivity of the defect removal. Usually the defect removal efficiency is around 85\% and virtually never reaches 100\%.
 
--Defect severity levels
--Maintainability
-	-Maintenance assignment scope
-	-Cyclomatic complexity
-	-Entropy or rate of structural decay
+Some latent defects can be defects found during the development or testing but ones that have not been repaired before the release of the software. Other defects were present in the application, but not discovered by the developers or test personnel. Furthermore, some defects can be originated from new development or other defect repairs in the form of bad fixes. The last two weeks before the release can bring in from about 1\% to even 5\% of delivered defects.
 
--Positive impact on maintainability
-	-Training
-	-Structural diagrams
-	-Comments clarity
-	-No error-prone modules
-	-Maintenance tools
-	-Maintenance workloads
-	-Programming languages
+% Before: latent defects because not found early enough
+%Commercial vendors have begun to deliver software with significant number of defects
+%	Earlier delivery dates
+%	"A rapid follow-on release will fix the defects"
+%	The intent to use the skills of customers for defect repairs
+%Compensating the user for repairing or identifying security flaws
+
+%Defect severity levels
+%Maintainability
+%	Maintenance assignment scope
+%	Cyclomatic complexity
+%	Entropy or rate of structural decay
+%
+%Positive impact on maintainability
+%	Training
+%	Structural diagrams
+%	Comments clarity
+%	No error-prone modules
+%	Maintenance tools
+%	Maintenance workloads
+%	Programming languages
+%
+\subsection{Shibesection}
