Some text about latent defects in post-release era

--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -1,17 +1,23 @@
 \section{Post Release}
 
-After a software product has been released to the market, it practically always still has defects in it. IBM calls these defects latent defects, because before the release, these defects have not yet been found as problems to customers. The existence of these defects is due to the imperfect effectivity of the defect removal. Usually the defect removal efficiency is around 85\% and virtually never reaches 100\%.
+After a software product has been released to the market, it practically always still has defects in it. IBM calls these defects latent defects, because before the release, these defects have not yet been found as problems to customers. The existence of these defects is due to the imperfect effectiveness of the defect removal. Usually the defect removal efficiency is around 85\% and virtually never reaches 100\%.
+
+\subsection{Latent defects}
 
 Some latent defects can be defects found during the development or testing but ones that have not been repaired before the release of the software. Other defects were present in the application, but not discovered by the developers or test personnel. Furthermore, some defects can be originated from new development or other defect repairs in the form of bad fixes. The last two weeks before the release can bring in from about 1\% to even 5\% of delivered defects.
 
-% Before: latent defects because not found early enough
-%Commercial vendors have begun to deliver software with significant number of defects
-%	Earlier delivery dates
-%	"A rapid follow-on release will fix the defects"
-%	The intent to use the skills of customers for defect repairs
-%Compensating the user for repairing or identifying security flaws
+In a traditional development of commercial software, most of the latent defects found in after the release were those that hadn't been found and removed in the development and testing phase. In the more recent history, some vendors have started to release software with remarkable amounts of known, but not removed, defects. In small applications, below 1000 function points, there might be a handful of latent defects present. In larger systems, hundreds of latent defects can be released with the software. Moreover, in massive applications, like Windows 7 or SAP, the amount of known latent defects can sometimes be counted in thousands.
+
+The motivation behind releasing a software with known latent defects appears to be compiled from three factors: first, the aspiration for achieving earlier release dates. Second, an assumption that a quick subsequent release will fix the defects. Third, the utilization of the skills of the customers for finding and repairing defects. The latest of the three can include a strategic offer for customers to get a compensation for repairing or identifying flaws.
+
+This trend of releasing a software knowingly with defects has made customers skeptical about buying or installing the first release of a new software. Some customers prefer to wait for a second release, assuming the latter versions have many of the latent defects removed.
+identifying security flaws
 
 %Defect severity levels
+
+
+\subsection{Maintainability}
+
 %Maintainability
 %	Maintenance assignment scope
 %	Cyclomatic complexity
@@ -26,4 +32,18 @@ Some latent defects can be defects found during the development or testing but o
 %	Maintenance workloads
 %	Programming languages
 %
+
+
+\subsection{First year discovery rates}
+
+\subsection{Fixers: Development personnel or Maintenance specialists}
+
+\subsection{Costs of Post-Release Defects in small application}
+
+
+
+
 \subsection{Shibesection}
+
+
+
