--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -13,8 +13,18 @@ The motivation behind releasing a software with known latent defects appears to 
 This trend of releasing a software knowingly with defects has made customers skeptical about buying or installing the first release of a new software. Some customers prefer to wait for a second release, assuming the latter versions have many of the latent defects removed.
 identifying security flaws
 
-%Defect severity levels
 
+\subsection{Defect severity levels}
+
+Because of the potential high amount of defects combined with limited amount of resources for removing them, some system for categorizing the defects on the basis of seriousness is needed. One of the oldest methods for assigning severity levels to defects is the IBM severity scale, which dates back to 1950s. It is still probably the most used severity scale.
+
+The IBM severity scale contains four levels of severities and four other categories of defects. The defects in the first severity level cause that the software does not operate at all. Level 2 defects are disruptions or errors in major features. Level 3 contains minor disruptions, with which the software is still usable. Severity level 4 defects cause cosmetic errors that does not impact the operation of the software.
+
+The other categories in the IBM severity scale consist of four levels existing for convenience. Invalid defect level contains problems that are caused by hardware or other software. Duplicate defect is a category for additional reports of a known defect. Abeyant defect contains defects that cannot be reproduced. Improvement category is for reported defects which are actually suggested improvements.
+
+The usage of the severity scale is for arranging the defects to an order in which they are repaired. Defects in the higher levels are more important to customers than the low-severity defects. Because of this, the group responsible for removing post-release defects use more effort to the higher level defects. The defects in the highest levels may even require temporary fixes to allow the continued usage of the software.
+
+% Structural quality !?!
 
 \subsection{Maintainability}
 
@@ -39,11 +49,4 @@ identifying security flaws
 \subsection{Fixers: Development personnel or Maintenance specialists}
 
 \subsection{Costs of Post-Release Defects in small application}
-
-
-
-
-\subsection{Shibesection}
-
-
 
