Added notes from the top of my fedora

--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -1,21 +1,38 @@
 
  \section{QA Methods and Processes Used}
- 
- \begin{itemize}
- 
- \item Käytetyt QA-metodit
- \item Kerrotaan prosessista ja tiimistä
- 
-Static code analysis (IDEn vakiot), Communication ("embedded users"), Testing(frontend, backend unit testing and integration tests), occasional reviews (rarely)
 
- \end{itemize}
+-Kerrotaan prosessista ja tiimistä 
  
+-Käytetyt QA-metodit
+
+	-Static code analysis (IDEn vakiot)
+
+	-Communication ("embedded users")
+
+	-Testing(frontend, backend unit testing and integration tests)
+
+	-Occasional reviews (rarely)
+
+	-Continuous Integration
+
+
  \section{Achieved Quality in The Project}
 
- \begin{itemize}
- 
- \item Kartoitetaan bugit (Mailit, Pivotal, Repo)  
- \item Asiakkaan ja loppukäyttäjien tyytyväisyys
- 
- \end{itemize}
- 
+-Kartoitetaan bugit (Mailit, Pivotal, Repo)  
+
+-Asiakkaan ja loppukäyttäjien tyytyväisyys
+
+
+Miken lista hyvästä laadusta:
+
+-I Know It When I See It -> Validoinnit
+
+-Lyhyet sprintit
+
+-Tasainen vastuunjako
+
+-Kommunikointi
+
+-Refaktoroinnit
+
+-MVP
