--- a/case/s_qa_futurice.tex
+++ b/case/s_qa_futurice.tex
@@ -1,2 +1,11 @@
 
  \section{Quality Assurance in Futurice}
+
+% Futurice overview
+% No common practises, QA fitted into the situation
+% Lean and Agile
+% Automation
+% Knowledge sharing
+% Communication
+% Maintainability and good structure
+% 
